Fixed wrap

--- a/html/styles/mainstyle.css
+++ b/html/styles/mainstyle.css
@@ -6,6 +6,8 @@
 
 html, body {
   width: 100%;
+  height: 100%;
+  min-height: 100%;
   background-color: #f0f0f0;
 }
 
@@ -14,27 +16,18 @@ h2 {
   text-align: center;
 }
 
-a:link {
-  color:#0645AD;
-}
-a:visited {
-  color:#0645AD;
-}
-a:hover {
-  color:#0645AD;
-}
-a:active {
+a:link, a:visited, a:hover, a:active {
   color:#0645AD;
 }
 
 /* Тело */
 .mainBody {
   width: 70%;
-  height: 100%;
+  min-height: 100%;
   margin-left: auto;
   margin-right: auto;
   background-color: #fafafa;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* Заголовок */
@@ -78,6 +71,7 @@ a:active {
 /* Данные пользователя */
 .userInf {
   width: 60%;
+  min-width: 600px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 15px;
